# xlog

./: CMakeLists.txt  readme.md
sample/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
xlog/: CMakeLists.txt  Config.cmake.in
xlog/include/xlog/: BaseFormatter.h  ConsoleLogger.h  FileLogger.h  Formatter.h  IFormatter.h  ILogger.h  Log.h  LogContext.h  LogLevel.h  base_formatter.hpp  config.hpp  console_logger.hpp  file_logger.hpp  format_formatter.hpp  formatter.hpp  log_context.hpp  log_level.hpp  logger.hpp  xlog.h  xlog.hpp
xlog/include/xlog/inner/: log.hpp
xlog/src/: BaseFormatter.cpp  ConsoleLogger.cpp  FileLogger.cpp  Formatter.cpp  Log.cpp  base_formatter.cpp  console_logger.cpp  file_logger.cpp  format_formatter.cpp
xlog/src/inner/: log.cpp
